force-app/main/default/objects/ClearTax_Api_Details__c/ClearTax_Api_Details__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ClearTax Api Details</label>
</CustomObject>