force-app/main/default/objects/ClearTax_Api_Details__c/fields/BaseURL_AccessToken__c.field-meta.xml
<CustomField>
    <fullName>BaseURL_AccessToken__c</fullName>
    <label>BaseURL AccessToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>