force-app/main/default/objects/ClearTax_Api_Details__c/fields/Buyer_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Buyer_State_Code__c</fullName>
    <label>Buyer State Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>