force-app/main/default/objects/ClearTax_Api_Details__c/fields/Cancel_IRN_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Cancel_IRN_Base_URL__c</fullName>
    <label>Cancel IRN Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>