force-app/main/default/objects/ClearTax_Api_Details__c/fields/E_Invoice_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>E_Invoice_Base_URL__c</fullName>
    <label>E-Invoice Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>