force-app/main/default/objects/ClearTax_Api_Details__c/fields/E_Invoice_PDF_BaseURL__c.field-meta.xml
<CustomField>
    <fullName>E_Invoice_PDF_BaseURL__c</fullName>
    <label>E-Invoice PDF BaseURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>