force-app/main/default/objects/ClearTax_Api_Details__c/fields/E_Way_Bill_BaseURL__c.field-meta.xml
<CustomField>
    <fullName>E_Way_Bill_BaseURL__c</fullName>
    <label>E-Way Bill BaseURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>