force-app/main/default/objects/ClearTax_Api_Details__c/fields/POS_Code__c.field-meta.xml
<CustomField>
    <fullName>POS_Code__c</fullName>
    <label>POS Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>